--- a/conf/local.conf
+++ b/conf/local.conf
@@ -149,10 +149,8 @@ INHERIT += "rm_work"
 # meta/classes-recipe/image.bbclass and
 # meta/classes-recipe/core-image.bbclass for more details.
 # We default to allowing root login without a password for convenience.
-EXTRA_IMAGE_FEATURES ?= "allow-empty-password empty-root-password allow-root-login"
-#install fonts
-#RM_OLD_POSTINSTALL_INTERCEPT:remove = "update_font_cache"
-#IMAGE_INSTALL:append = " fontconfig ttf-dejavu"
+EXTRA_IMAGE_FEATURES ?= "allow-empty-password empty-root-password allow-root-login ssh-server-dropbear"
+
 #
 USE_NLS = "no"
 PACKAGECONFIG:remove:pn-qemu-native = "gtk+"
